RESOLVED FIXED16449
cairo_arc() functions hang or crash when passed inf as radius or start/end angle
https://bugs.webkit.org/show_bug.cgi?id=16449
Summary cairo_arc() functions hang or crash when passed inf as radius or start/end angle
Alp Toker
Reported 2007-12-15 04:58:42 PST
Found by tests: LayoutTests/fast/canvas/arc-crash.html LayoutTests/fast/canvas/canvas-with-incorrect-args.html Both cause hangs.
Attachments
Add checks for inf to fix tests (1.70 KB, patch)
2007-12-15 05:07 PST, Alp Toker
mrowe: review+
Alp Toker
Comment 1 2007-12-15 05:07:16 PST
Created attachment 17913 [details] Add checks for inf to fix tests
Alp Toker
Comment 2 2007-12-15 05:13:46 PST
Landed in 28751.
Alp Toker
Comment 3 2007-12-15 05:43:47 PST
Hanging tests removed from the skip list in follow-up commit r28752.
Note You need to log in before you can comment on or make changes to this bug.