third_party/WebKit/WebCore/platform/graphics/cairo/PathCairo.cpp
@@ -4,7 +4,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     Copyright (C) 2004, 2005, 2006 Nikolas Zimmermann <wildfox@kde.org>
                   2004, 2005, 2006 Rob Buis <buis@kde.org>
                   2005, 2007 Apple Inc. All Rights reserved.
-                  2007 Alp Toker <alp.toker@collabora.co.uk>
+                  2007 Alp Toker <alp@atoker.com>
 
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Library General Public
@@ -30,9 +30,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "FloatRect.h"
 #include "NotImplemented.h"
 #include "PlatformString.h"
+
 #include <cairo.h>
 #include <math.h>
-#include <stdio.h>
 
 namespace WebCore {
 
@@ -139,6 +139,11 @@ void Path::addBezierCurveTo(const FloatPoint& controlPoint1, const FloatPoint& c
 
 void Path::addArc(const FloatPoint& p, float r, float sa, float ea, bool clockwise)
 {
+    // http://bugs.webkit.org/show_bug.cgi?id=16449
+    // cairo_arc() functions hang or crash when passed inf as radius or start/end angle
+    if (!isfinite(r) || !isfinite(sa) || !isfinite(ea))
+        return;
+
     cairo_t* cr = platformPath()->m_cr;
     if (clockwise)
         cairo_arc(cr, p.x(), p.y(), r, sa, ea);
